compiler/tests/fa/errors/pure_write_param_fa.salam
// انتظار: خطا۰۱۳
// زبان: فارسی
خالص تابع نوشتن_مقدار(p صحیح۶۴*, v صحیح۶۴) صحیح۶۴:
    p[0] = v
    بازگشت v
پایان

تابع اصلی:
    چاپ(1)
پایان
